# starfield-chroma-companion

./: .gitignore  CHANGELOG.md  LICENSE  PROMOTION.md  PUBLISHING.md  README.md  auto-start-sfse.mjs  install-plugin.cmd  launch-starfield-chroma.cmd  launch-starfield-sfse.cmd  mo2-start.mjs  starfield-chroma.config.json  start-companion.cmd  start-tray.cmd
commonlibsf-probe/: xmake.lua
commonlibsf-probe/src/: probe.cpp
companion/: starfield-chroma-companion.mjs
docs/: MO2_SETUP.md  NEXUS_FULL_DESCRIPTION.md  NEXUS_INSTALLER_FILE_DESCRIPTION.txt
launcher/: starfield-chroma-launcher.mjs
sfse-plugin/: CMakeLists.txt
sfse-plugin/src/: plugin.cpp
tools/: build-installer-package.ps1  build-launcher-exe.ps1  build-nexus-clean-package.ps1  install-windows-shortcuts.ps1  run-keyboard-demo.mjs  send-test-event.mjs  starfield-chroma-installer.ps1  starfield-chroma-tray.ps1
